[package]
name = "sframe_test"
version = "0.1.0"
edition = "2024"

[features]
# Backend crittografici sframe
sframe-ring = ["sframe/ring"]
sframe-openssl = ["sframe/openssl"]
sframe-rust-crypto = ["sframe/rust-crypto"]

# Abilita le dipendenze native (binari, GUI, camera, ecc.)
native = [
  "cpal",
  "nokhwa",
  "image",
  "minifb",
  "pixels",
  "bytemuck",
  "winit",
  "softbuffer",
  "ctrlc",
  "simple_logger",
]

# Segnaposto per build web/wasm
web = []

# Default: parte native attiva + sframe-rust-crypto
default = ["sframe-rust-crypto", "native"]

[lib]
name = "sframe_core"
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
hex = "0.4.3"
sha2 = "0.10"

# RNG compatibile anche su Web (getrandom usa WebCrypto su wasm32)
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# SFrame dal tuo repo
sframe = { git = "https://github.com/TobTheRock/sframe-rs.git", branch = "main", default-features = false }

# ── Dipendenze NATIVE rese opzionali ────────────────────────────────────────────
cpal        = { version = "0.15", optional = true }
image       = { version = "0.24.9", default-features = true, features = ["jpeg", "png"], optional = true }
minifb      = { version = "0.25", optional = true }
pixels      = { version = "0.13", optional = true }
bytemuck    = { version = "1.15", optional = true }
winit       = { version = "0.28", optional = true }
softbuffer  = { version = "0.3", optional = true }
nokhwa      = { version = "0.10.9", default-features = false, features = ["input-native"], optional = true }
ctrlc       = { version = "3", optional = true }
simple_logger = { version = "5", optional = true }

env_logger = "0.11"
tls_codec = { version = "0.4", features = ["derive"] }

# ── Dipendenze SPECIFICHE per WASM (Armonizzate per OpenMLS 0.8.1) ──────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.105", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
base64 = "0.22"
hkdf = "0.12"
once_cell = "1.19"
web-sys = { version = "0.3", features = ["console", "Window", "Storage"] }

#CONFIGURAZIONE 0.8.1 COMPLETA
openmls = { version = "0.8.1", features = ["js"] }
openmls_rust_crypto = "0.5.1"
openmls_traits = "0.5.0"
openmls_basic_credential = "0.5.0"

[[bin]]
name = "tx_audio"
path = "src/tx_audio.rs"

[[bin]]
name = "rx_audio"
path = "src/rx_audio.rs"

[[bin]]
name = "tx_video"
path = "src/tx_video.rs"

[[bin]]
name = "rx_video"
path = "src/rx_video.rs"

[[bin]]
name = "rx_video_http"
path = "src/rx_video_http.rs"

[[bin]]
name = "tx_av"
path = "src/tx_av.rs"

[[bin]]
name = "rx_av"
path = "src/rx_av.rs"

[[bin]]
name = "peer_av"
path = "src/peer_av.rs"

[[bin]]
name = "mls_peer_av"
path = "src/mls_peer_av.rs"

[[bin]]
name = "mls_sframe_demo"
path = "src/mls_sframe_demo.rs"

[dev-dependencies]
pretty_assertions = "1"