[package]
name = "mls_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
base64 = "0.22"
env_logger = "0.11"

# OpenMLS tutti dalla STESSA repo e STESSO branch
openmls = { git = "https://github.com/openmls/openmls", rev = "0223a6ad" }
openmls_basic_credential = { git = "https://github.com/openmls/openmls", rev = "0223a6ad", package = "openmls_basic_credential" }
openmls_rust_crypto = { git = "https://github.com/openmls/openmls", rev = "0223a6ad", package = "openmls_rust_crypto" }

