[package]
name = "mls_server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
env_logger = "0.11"
# Abbiamo eliminato OpenMLS! Il server ora è un postino cieco.